# OrchestrAI

./: .env.sample  LICENSE  README.md  compose-dev.yaml  compose.yaml
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml
backend/: Dockerfile  config.py  pyproject.toml  requirements.txt
backend/api/: Dockerfile  config.py  dependencies.py  main.py  pyproject.toml
backend/api/agent/: orchestration.py
backend/api/core/: config.py  dependencies.py  logs.py  mcps.py  models.py
backend/api/core/agent/: orchestration.py  persistence.py
backend/api/core/agent/prompts/: __init__.py
backend/api/routers/: checkpoints.py  llms.py  mcps.py
backend/app/: dependencies.py  main.py
backend/app/routers/: llms.py
backend/mcp/: Dockerfile  main.py  pyproject.toml
backend/shared_mcp/: models.py  tools.py
community/youtube/: build.sh
docs/: grafana-stack.md  langfuse.md  langgraph.md  mcp.md  supabase.md
envs/: backend.env  shared_mcp.env
inspector/: Dockerfile
nginx/: nginx.conf
